assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');

:root {
  --bg-color: #ffffff;
  --bg-secondary-color: #F6F6F6;
  --bg-darker-color: #E5E5E5;
  --bg-darkest-color: #D4D4D4;
  --fg-color: #000000;
  --red: #AF2721;
  --green-bg: #90BA6A;
  --green-bg-dark: #7CA15C;
}

body {
  font-family: "Roboto", sans-serif;
  font-size: 20px;
}

a {
  color: var(--fg-color);
}

.no-select {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.container {
  margin: 0 auto;
  width: 95%;
  max-width: 1100px;
}

.nav {
  display: flex;
  margin-bottom: 20px;
}

.nav__title {
  font-size: 30px;
}

.header {
  display: flex;
  justify-content: center;
  margin: 20px 0;
}

.books {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(330px, max-content));
  grid-gap: 25px;
  justify-content: center;
  padding: initial;
}

.book {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
  border-radius: 10px;
  min-width: 300px;
  height: 220px;
  padding: 10px;
  text-align: center;
}

.book__read {
  background-color: var(--bg-darker-color);
  padding: 9px 0;
  width: 95%;
  border-radius: 10px;
  cursor: pointer;
}

.book__read:hover {
  background-color: var(--bg-darkest-color);
}

.book__read--read {
  background-color: var(--green-bg);
}

.book__read--read:hover {
  background-color: var(--green-bg-dark);
}

.book__remove {
  background-color: var(--bg-darker-color);
  padding: 9px 0;
  width: 95%;
  border-radius: 10px;
  cursor: pointer;
}

.book__remove:hover {
  background-color: var(--bg-darkest-color);
}

.add-book-button {
  background-color: var(--bg-darker-color);
  border: 0;
  border-radius: 5px;
  font-size: 25px;
  font-weight: 500;
  padding: 3px 8px;
  cursor: pointer;
}

.add-book-button:hover {
  background-color: var(--bg-darkest-color);
}

.form-overlay {
  position: fixed;
  width: 100%; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: none;
  align-items: center;
  justify-content: center;
  background-color: rgba(0, 0, 0, 0.3);
}

.form-overlay--animate {
  animation-name: form-overlay-fadein;
  animation-duration: 0.12s;
}

@keyframes form-overlay-fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1
  }
}

.form-overlay.visible {
  display: flex;
}

.add-form {
  display: flex;
  margin: 20px 0;
  padding: 12px 0;
  flex-direction: column;
  align-items: center;
  width: 300px;
  gap: 10px;
  background-color: var(--bg-secondary-color);
  border-radius: 12px;
}

.add-form input {
  border: 2px solid rgba(0, 0, 0, 0.1);
  font-size: 16px;
  padding: 3px;
  border-radius: 4px;
}

.add-form__warnings {
  color: var(--red);
  text-align: center;
}

input.add-form__submit {
  background-color: var(--green-bg);
  border: 0;
  padding: 9px 0;
  width: 90%;
  border-radius: 10px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
}

input.add-form__submit:hover {
  background-color: var(--green-bg-dark);
}

.footer {
  text-align: center;
  margin-top: 50px;
}

